--- a/subway/fire/6.html
+++ b/subway/fire/6.html
@@ -77,14 +77,69 @@
                <li><a href="#h-3">Heading C</a></li>
                <li><a href="#h-4">Heading D</a></li>
             </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+           
+<h2><strong>Hours  of service</strong></h2>
+<p>Returns  can be filed only during the following hours, every day of the week</p>
+<table>
+  <caption>National hours of operation by time zone</caption>
+  <tr>
+    <td><p><strong>Time Zone</strong></p></td>
+    <td><p><strong>Hours of    service</strong></p></td>
+  </tr>
+  <tr>
+    <td><p>British    Columbia and Yukon<br>
+      (Pacific Time)</p></td>
+    <td><p>3 a.m. to    12 a.m.</p></td>
+  </tr>
+  <tr>
+    <td><p>Alberta,    Saskatchewan, Northwest Territories, and Nunavut<br>
+      (Mountain Time)</p></td>
+    <td><p>4 a.m.    to 1 a.m.</p></td>
+  </tr>
+  <tr>
+    <td><p>Manitoba,    Northwest Territories, and Nunavut<br>
+      (Central Time)</p></td>
+    <td><p>5 a.m.    to 2 a.m.</p></td>
+  </tr>
+  <tr>
+    <td><p>Ontario,    Quebec, and Nunavut (Eastern Time)</p></td>
+    <td><p>6 a.m.    to 3 a.m.</p></td>
+  </tr>
+  <tr>
+    <td><p>New    Brunswick, Nova Scotia, and PEI (Atlantic Time)</p></td>
+    <td><p>7 a.m.    to 4 a.m.</p></td>
+  </tr>
+  <tr>
+    <td><p>Newfoundland    and Labrador<br>
+      (Newfoundland Time)</p></td>
+    <td><p>7:30 a.m.    to 4:30 a.m.</p></td>
+  </tr>
+</table>
+<h2><strong>Contact us </strong><strong> </strong></h2>
+<ul>
+  <li>For information or       assistance on filling an information return electronically, call the       Electronic Media Processing Unit at <strong>1-800-665-5164</strong>, between 7:00 and 17:00 (EST). If       you are outside of Canada, call <strong>613-940-8599</strong>.</li>
+  <li>For information about       completing slips and summaries see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/completing-slips-summaries.html">Filling out slips and summaries</a> or call <strong>1-800-959-5525</strong>. If you are outside of Canada,       call <strong>613-940-8497</strong>.</li>
+</ul>
+<p>To get email updates about electronic  filing, see <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-electronic-filing-information-returns.html">Electronic  Filing for Businesses</a>.</p>
+<h2><strong>Electronic  mailing list</strong></h2>
+<p>This list will provide filers of  information returns such as T4 and T5 returns with email updates about  important new information on our website, including:</p>
+<ul>
+  <li>Legislative changes affecting the filing of       returns, and</li>
+  <li>New technical specifications for filing returns       electronically using the Internet (<a href="https://www.canada.ca/en/revenue-agency/services/e-services/filing-information-returns-electronically-t4-t5-other-types-returns-overview.html">Filing Information Returns       Electronically</a>).</li>
+</ul>
+<h2>To subscribe</h2>
+<form>
+  <p>Your email  address:
+    <INPUT TYPE="submit" ACTION="https://www.cra-arc.gc.ca/cgi-bin/listsubmitr2.cgi" VALUE="Subscribe" METHOD="post" NAME="btnSubmit">
+  </p>
+</form>
+<h2>To unsubscribe</h2>
+<form>
+  <p>Your email  address:
+    <INPUT TYPE="submit" ACTION="https://www.cra-arc.gc.ca/cgi-bin/listsubmitr2.cgi" VALUE="Unsubscribe" METHOD="post" NAME="btnSubmit2">
+  </p>
+</form>
+
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
