--- a/subway/fire/4a.html
+++ b/subway/fire/4a.html
@@ -81,14 +81,130 @@
                <li><a href="#h-3">Heading C</a></li>
                <li><a href="#h-4">Heading D</a></li>
             </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-2">Heading B</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-3">Heading C</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 id="h-4">Heading D</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+           
+<h2>Type  of information returns available through Web Forms</h2>
+<ul>
+  <ul>
+    <li><strong>T4 Group</strong>; T4, T4A, T4A-NR, T4RIF, T4RSP, T4E, T4FHSA</li>
+    <li><strong>T5 Group</strong>; T5, T5007, T5008, T5018, RRSP, TFSA, T5013,  PRPP, PRT XVIII, PRT XIX, T2202</li>
+    <li><strong>Other</strong>; NR4, T3, T1204</li>
+  </ul>
+</ul>
+<h2>How to  file with Web Forms</strong><strong> </h2>
+<p>For every situations, the 2 first steps  are:</p>
+<ul>
+  <ul>
+    <li>On  the disclaimer page, click on &ldquo;I agree&rdquo;.</li>
+    <li>On  the Web Forms access page, enter the Account Number without dashes or spaces  (Trust Number, Non-Resident Number, 15 characters RP or RZ Business Number) and  the associated Web access code (WAC) and click &ldquo;Next&rdquo;.</li>
+  </ul>
+</ul>
+<ul>
+  <li><u>How to file an  Original return with Web Forms</u><u> </u></li>
+  <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return&rdquo; and click &ldquo;Next&rdquo;.</li>
+  <li>On  Web Forms – start a new return page, enter the account number that will be on  the summary (RZ, RP, Trust account or NR4), the type of information return and either  Original or Amended and click &ldquo;Next&rdquo;. </li>
+  <li>On  Web Forms – employer/payer information page, choose the Tax Year of the  information return. Enter the payer name (Company name, Trust account name or  Non-resident name) and fill out all the required (*) boxes on the page  including valid contact information. Click &ldquo;Next&rdquo;. </li>
+  <li>On  Web Forms – slip page, complete all required (*) slip information, per each  recipient. </li>
+  <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
+  <li>On  the Web Forms – add/ modify / delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete,  click on:</li>
+  <ul>
+    <ul>
+      <li><strong><em>Summary</em></strong>; to see the calculated summary totals. </li>
+      <li><strong><em>Save  incomplete return</em></strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
+      <li><strong><em>Back  to employer/payer page</em></strong>;  to change payer information.</li>
+    </ul>
+  </ul>
+  <li>On  the Web Forms – summary page, check the declaration box and click on  &ldquo;Recalculate summary&rdquo; to validate. </li>
+  <li>Check  again the declaration box and click on &ldquo;Submit to CRA for processing&rdquo;.</li>
+  <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
+  <li>Additional options on this page:</li>
+  <ul>
+    <ul>
+      <li><strong><em>View  PDF version of your return</em></strong>; to save complete return in PDF format and print slips. </li>
+      <li><strong><em>Save  your return for future import</em></strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return.</li>
+      <li><strong><em>File  another return</em></strong>; select  &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return. </li>
+      <li><strong><em>Download  individual slips</em></strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print.</li>
+    </ul>
+  </ul>
+</ul>
+
+<ul>
+  <li><u>How to file an  Amended or Cancelled return with Web Forms</u><u> </u></li>
+  <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return&rdquo; and click &ldquo;Next&rdquo;.</li>
+  <li>On  Web Forms – start a new return page, enter the account number that will be on  the summary (RZ, RP, Trust account or NR4), the type of information return as  Amended and click &ldquo;Next&rdquo;. </li>
+  <li>On  Web Forms – employer/payer information page, choose the Tax Year of the  information return. Enter the payer name (Company name, Trust account name or  Non-resident name) and fill out all the required (*) boxes on the page  including valid contact information. Click &ldquo;Next&rdquo;. </li>
+  <li>On  Web Forms – slip page, select slip type (Amended or Cancelled) and complete all  required (*) slip information, per each recipient. </li>
+  <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
+  <li>On  the Web Forms – add/ modify / delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete, enter  an explanation for amendments and click on:</li>
+  <ul>
+    <li><strong><em>Summary</em></strong>; to see the calculated summary totals. </li>
+    <li><strong><em>Save  incomplete return</em></strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
+    <li><strong><em>Back  to employer/payer page</em></strong>;  to change payer information.</li>
+  </ul>
+  <li>On  the Web Forms – summary page, check the declaration box and click on  &ldquo;Recalculate summary&rdquo; to validate.</li>
+  <li>Check  again the declaration box, then click on &ldquo;Submit to CRA for processing&rdquo;.</li>
+  <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA. </li>
+  <li>Additional options on this page:</li>
+  <ul>
+    <li><strong><em>View  PDF version of your return</em></strong>; to save complete return in PDF format and print slips. </li>
+    <li><strong><em>Save  your return for future import</em></strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return.</li>
+    <li><strong><em>File  another return</em></strong>;  select &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return. </li>
+    <li><strong><em>Download  individual slips</em></strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print.</li>
+  </ul>
+</ul>
+<p><u> </u></p>
+<ul>
+  <li><u>How to continue a  return from the saved .xml file that has not been submitted</u><u> </u></li>
+  <ul>
+    <li>On  Web Forms – what do you want to do page, select &ldquo;Continue a return from the  saved .xml file that has not yet been submitted to the CRA&rdquo; and click &ldquo;Next&rdquo;.</li>
+    <li>On  Web Forms – continue with unsubmitted return page, click &ldquo;Choose File&rdquo; to open your  computer browser and select the unsubmitted .xml file previously created with  Web Forms. Click &ldquo;Next&rdquo;.</li>
+    <li>You  will be redirected on Web Forms –slip page, with the last slip created on the  incomplete Web Forms file previously saved on your personal computer by option  &ldquo;Save incomplete return&rdquo;. Complete all required (*) slip information, per each  recipient.</li>
+    <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
+    <li>On  the Web Forms – add/ modify/ delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete,  click on: </li>
+    <ul>
+      <li><strong><em>Summary</em></strong>; to see the calculated summary totals.</li>
+      <li><strong><em>Save  incomplete return</em></strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
+      <li><strong><em>Back  to employer/payer page</em></strong>;  to change payer information.</li>
+    </ul>
+    <li>On  the Web Forms – summary page, check the declaration box and click on  &ldquo;Recalculate summary&rdquo; to validate.</li>
+    <li>Check  again the declaration box and click on &ldquo;Submit to CRA for processing&rdquo;.</li>
+    <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
+    <li>Additional  options on this page:</li>
+    <ul>
+      <li><strong><em>View  PDF version of your return</em></strong>; to save complete return in PDF format and print slips. </li>
+      <li><strong><em>Save  your return for future import</em></strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return. </li>
+      <li><strong><em>File  another return</em></strong>; select  &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return.</li>
+      <li><strong><em>Download  individual slips</em></strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print. </li>
+    </ul>
+  </ul>
+</ul>
+
+<ul>
+  <li><u>How to start a  new return using a previously submitted .xml file</u><u> </u></li>
+  <ul>
+    <li>On  Web Forms – what do you want to do page, select &ldquo;Start a new original or  amended return using your previously submitted .xml&rdquo; and click &ldquo;Next&rdquo;.</li>
+    <li>On  Web Forms – import previously submitted return page, click &ldquo;Choose File&rdquo; to  open your computer browser and select the submitted .xml file previously  created with Web Forms. Select the type of return (Original, Amended or Fixed  (PartXVIII and PartXIX only)) and click &ldquo;Next&rdquo;.</li>
+    <li>You  will be redirected on Web Forms – employer/payer information page, with the  information previously saved on your personal computer by the option &ldquo;Save your  return for future import&rdquo;. The boxes will contains previous values. Update and  complete all required (*) slip information, per each recipient. </li>
+    <li>Click  on &ldquo;Validate and Continue&rdquo; to see list of completed slips.</li>
+    <li>On  the Web Forms – add/ modify / delete slips page, add, modify or delete existing  slips on the page before completing the summary. When all the slips complete, enter  an explanation for amendments and click on:</li>
+    <ul>
+      <li><strong><em>Summary</em></strong>; to see the calculated summary totals. </li>
+      <li><strong><em>Save  incomplete return</em></strong>;  to save an unfinished .xml encrypted on your computer to continue later.</li>
+      <li><strong><em>Back  to employer/payer page</em></strong>;  to change payer information.</li>
+    </ul>
+    <li>On  the Web Forms - summary page, check the declaration box to certify and click on  &ldquo;Recalculate summary&rdquo; to validate. </li>
+    <li>Check  again the declaration box, then click on &ldquo;Submit to CRA for processing&rdquo;.</li>
+    <li>Confirmation  of receipt page; make sure to print or save a copy of the confirmation page. It  is proof of your submission to CRA.</li>
+    <li>Additional  options on this page:</li>
+    <ul>
+      <li><strong><em>View  PDF version of your return</em></strong>; to save complete return in PDF format and print slips.</li>
+      <li><strong><em>Save  your return for future import</em></strong>; to save complete return as .xml file encrypted to your computer to  send amendments or import later to update and file next year&rsquo;s return. </li>
+      <li><strong><em>File  another return</em></strong>; select  &ldquo;View PDF version of your return&rdquo; to enable this option and file another  return. </li>
+      <li><strong><em>Download  individual slips</em></strong>;  to save zip file that contains individual PDF copies of the submitted slips to  print. </li>
+    </ul>
+  </ul>
+</ul>
+
+
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
