--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -670,21 +670,24 @@
 
 	<section id="adminpolicy" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is the CRA's administrative policy for the purpose of taxable benefits</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="what.html #ajax-adminpolicy"></div>
-	</div></section>	 
+	<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/calculate/benefit/what.html#ajax-adminpolicy"></div>
+	</div></section>	
+		 
 		  <section id="def-cash" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Cash</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="what.html #ajax-cash"></div>
+     <div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/calculate/benefit/what.html#ajax-cash"></div>
 	</div></section>
+		 
 	<section id="def-nearcash" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Near-cash</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="what.html #ajax-nearcash"></div>
+	<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/calculate/benefit/what.html#ajax-nearcash"></div>
 	</div></section>
 	
 	<section id="def-noncash" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Non-cash</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="what.html #ajax-noncash"></div>
+	<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/calculate/benefit/what.html#ajax-noncash"></div>
 	</div></section>
+		 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
