--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -574,7 +574,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or ">
   <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Employee: T4 slip - <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx" role="button">Non-cash&nbsp;<span class="far fa-question-circle"></span></a> and <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a> <span class="wb-inv">: Option 1</span></h3>
+    <h3 class="mrgn-tp-sm text-muted h4">Employee: T4 slip - Non-cash and near-cash <span class="wb-inv">: Option 1</span></h3>
 	<p>Report on: </p>
         <ul class="fa-ul">
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
@@ -584,7 +584,7 @@
                      </ul>
   </li>
   <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Employee: T4 slip - <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">Cash&nbsp;<span class="far fa-question-circle"></span></a> <span class="wb-inv">: Option 2</span></h3>
+    <h3 class="mrgn-tp-sm text-muted h4">Employee: T4 slip - Cash <span class="wb-inv">: Option 2</span></h3>
     <p>Report on: </p> <ul class="fa-ul">
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
                          <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings</li>
