--- a/subway/fire/3.html
+++ b/subway/fire/3.html
@@ -70,32 +70,23 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Get ready to file</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-            <h2 id="h-1">XML  specifications</h2>
-<h3>Find XML specifications to file electronically</h3>
+           <ol class="lst-stps ld-zr">
+			<li>
+            <h2 id="h-1">Find XML specifications to file electronically</h2>
+
 <p>The xml specifications assist you in  creating your xml file by identifying what we can accept in the file. You only  require the xml specifications if you are creating your own xml file.<br>
   You must include a <a href="https://www.canada.ca/en/revenue-agency/services/e-services/filing-information-returns-electronically-t4-t5-other-types-returns-overview/t619.html">T619,  Electronic Transmittal</a> record along with one  of the following return types to create a complete submission. <br>
   The first column of the table provides  links to the XML specifications for year 2023.<br>
   The last column of the table provides  links to the XML specifications for year 2024, when available.</p>
-<table>
+<table class="table table-condensed small">
+  <caption>Electronic filing options by return     type</caption>
   <tr>
-    <td><br>
-      <strong>Electronic filing options by return     type</strong></td>
-  </tr>
-  <tr>
-    <td><p><strong>Type of     return</strong><strong> </strong></p></td>
-    <td><p><strong>File using     Internet file transfer</strong></p></td>
-    <td><p><strong>File using Web Forms</strong></p></td>
-    <td><p><strong>Amend using     Internet file transfer</strong></p></td>
-    <td><p><strong>Amend using Web Forms</strong></p></td>
-    <td><p><strong>2024</strong></p></td>
+    <th scope="col">Type of     return</th>
+    <th scope="col">File using     Internet file transfer</th>
+    <th scope="col">File using Web Forms</th>
+    <th scope="col">Amend using     Internet file transfer</th>
+    <th scope="col">Amend using Web Forms</th>
+    <th scope="col">2024</th>
   </tr>
   <tr>
     <td><p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/filing-information-returns-electronically-t4-t5-other-types-returns-overview/upcoming-year-t619/agr-1.html">AGR-1, Statement of    Farm-Support Payments</a></p></td>
@@ -389,18 +380,19 @@
 <p>For a list of options available for  Registered Plans forms see: <a href="https://www.canada.ca/en/revenue-agency/services/tax/registered-plans-administrators/registered-retirement-savings-plans-registered-retirement-income-funds-rrsps-rrifs/filing-forms-registered-plans-directorate.html#flngptn">Filing  forms with the Registered Plans Directorate</a>.<br>
   For a list of filing options available  for the T3ATH-IND, T3RET, T3M and T3S return types, visit: <a href="https://www.canada.ca/en/revenue-agency/services/tax/trust-administrators/t3-return/how-file-t3-return.html">How  to file a T3 return</a>.<br>
   New for <strong>2024</strong> : T3P, T3D, T3PRP, T3RI, T3GR return types  will also need to be send by E-Services. </p>
-<h2><strong>XML  schema</strong></h2>
+  </li>
+  <li>
+<h2>Use the correct XML  schema</h2>
 <h5>Schema  for filing information returns </h5>
 <p>To file information returns in 2023,  download the <a href="https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/xmlschm1-23-1.zip">xmlschm1-23-1</a> file.<br>
   (version 1-23-1, last updated October 7, 2022)<br>
   Data records filed must match our exact specifications. This  allows us to process the data efficiently.<br>
   These specifications are subject to change.<br>
   If you need to use any of the following special characters,  please use a semi-colon <strong>after</strong> the  characters as shown in the chart below:</p>
-<table>
+<table class="table max-content">
   <tr>
-    <td><br>
-      <strong>Special characters</strong></td>
-    <td><p><strong>Use</strong></p></td>
+     <th scope="col">Special characters</th>
+     <th scope="col">Use</th>
   </tr>
   <tr>
     <td><p>&lt; </p></td>
@@ -425,7 +417,7 @@
 </table>
 <p><strong>Note:</strong> Although the above special characters are entered as 4  characters or more, they are considered to be only 1 character when entered in  the content area of an XML tag.<br>
   <strong>Example:</strong> John Smith &amp; Sons will be entered as John Smith <strong>&amp;amp;</strong> Sons</p>
-<ul type="disc">
+<ul>
   <li><strong>You do not need to include</strong> any       optional tags that are empty (i.e. which do not contain any information).</li>
 </ul>
 <p><strong>Example:</strong> &lt;padj_amt/&gt;is  an optional empty tag.<br>
@@ -463,7 +455,8 @@
   <li>Send new corrected file to CRA.</li>
 </ul>
 
-
+</li>
+</ol>
 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
