--- a/subway/fire/4.html
+++ b/subway/fire/4.html
@@ -69,35 +69,44 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How to file</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <h2 class="h3">On this page</h2>
-            <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
-            </ul>
-            <h2 id="h-1">What  you need to file your information return electronically</h2>
-<p>Before you file, have your documentation  ready. You will also need your account number (Trust Number, Non-Resident  Number, 15 characters RP or RZ Business Number) and Web access code (WAC).</p>
-<h4>What is a Web access code (WAC)?</h4>
+            
+			<ol class="lst-stps ld-zr">
+			<li><h2>Have your completed XML files</h2>
+			<p>(something here to talk about having the XML files on hand)</p></li>
+			<li><h2>Get your sign-in information ready</h2>
+<p>You will need your:</p>
+<ul class="fa-ul">
+<li><span class="fas fa-check text-success fa-li"></span> Account number (Trust Number, Non-Resident  Number, 15 characters RP or RZ Business Number)
+<ul><li>If you have more than one payroll  account, you have to file a separate return for each account.</li></ul></li>
+<li><span class="fas fa-check text-success fa-li"></span>  Web access code (WAC)
+<details><summary>What is a Web access code (WAC)</summary>
 <p>A Web access code is a personalized code  that is associated with your account number (RP, RZ, Trust or Non-Resident).  Your Web access code contains two letters and four numbers. It is case  sensitive.</p>
-<h4>Where do you find your Web access  code (WAC)?</h4>
+</details>
+<details><summary>Where you find your Web access  code (WAC)</summary>
 <p>If you do not remember your code or you  need a new one, you can:</p>
 <ul>
   <li>use our <a href="https://apps.cra-arc.gc.ca/ebci/leb0/wacretrieve/pub/disclaimer.action?request_locale=en">Web access code online service<br>
   </a></li>
   <li>call business enquiries at <strong>1-800-959-5525</strong></li>
 </ul>
-<h3>What if you have a balance due?</h3>
+</details></li>
+</ul>
+
+<h3>If you have a balance due</h3>
 <p>When you <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra.html">make  a payment to the Canada Revenue Agency</a>, do  not resubmit your return.</p>
-<h2>What  are the filing methods for electronic</h2>
+</li>
+<li>
+<h2>Determine your filing method</h2>
 <p>Where possible, you should file returns  electronically to avoid the delays that may occur in processing paper returns.<br>
-  <strong>Note</strong>: We  do not accept returns filed on CDs, DVDs, USB keys.</p>
-<h5>Web Forms: Option 1</h5>
-<p><a href="https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en">Web  Forms</a> allows you to complete an  information return easily, <strong>up to 100 slips</strong>, following step-by-step  instructions. To use it, an account number and the Web access code (WAC)  associated to this number is required.</p>
-<ul>
-  <li><u>Benefits  to using Web Forms</u><u> </u></li>
-  <li>Completely <strong>FREE</strong></li>
+
+  
+  <p>Options:</p>
+  <dl class="dl-horizontal">
+  <dt><span class="fas fa-check text-success"></span> Web Forms</dt><dd>For up to 100 slips
+<details class="mrgn-bttm-md"><summary>Benefits to using Web Forms</summary>
+ 
+ <ul>
+  <li>Completely <strong>free</strong></li>
   <li>You  can file <strong>up to 100 slips </strong>(original, amended, or cancelled)  from our website. If you want to file additional slips, file them as original  slips</li>
   <li>Create  an electronic information return containing slips and a summary, which can be  saved and imported at a later date</li>
   <li>Summary  totals are calculated for you</li>
@@ -105,37 +114,41 @@
   <li>The  application validates data in real time</li>
   <li>Send  encrypted returns over the Internet</li>
 </ul>
-<p><strong>OR</strong></p>
-<h5>Internet file transfer: Option 2</h5>
-<p><a href="https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en">Internet  file transfer</a> allows you to use  payroll, commercial, or in-house developed software, to submit an XML file of  up to 150 MB over the Internet. To use it, an account number and the Web access  code (WAC) associated to this number is required.<br>
-  <strong>IMPORTANT</strong> : An .xml file created with Web Forms or a PDF document saved  as an .xml will NOT pass validations through Internet file transfer.</p>
-<ul>
-  <li><u>Details about XML</u></li>
-  <li><strong>If  you use commercial software</strong>, it will automatically create your .xml  file. Use Internet file transfer to submit your file.</li>
-  <li><strong>If  you do not use commercial software</strong>, the use of the Web Forms is  recommended, otherwise, you have to create your own .xml file.</li>
-  <li><strong>If  you are a software developer and you want to create your own software</strong>,  you need the XML specifications to file an information return. Got to<strong> </strong><a href="https://www.canada.ca/en/revenue-agency/services/e-services/filing-information-returns-electronically-t4-t5-other-types-returns-overview/filing-information-returns-electronically-t4-t5-other-types-returns-what-you-should-know-before.html#xmlspcs">Find XML specifications  to file electronically</a> for  more detail.</li>
-  <li><strong>Download  the CRA schema</strong>; to file information returns in 2023, download  the <a href="https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/xmlschm1-23-1.zip">xmlschm1-23-1</a> file. (version 1-23-1, last updated October 7, 2022)</li>
+</details>
+<p>Refer to: <a href="4a.html">How to file with Web Forms</a></p></dd>
+  <dt><span class="fas fa-check text-success"></span> Internet file transfer</dt><dd><p>For you to use payroll, commercial, or in-house developed software, to submit an XML file of up to 150 MB over the Internet</p>
+  <p>Refer to: <a href="4b.html">How to file with Internet file transfer</a></dd>
+
+
+  <dt><span class="fas fa-times text-danger"></span> CDs, DVDs, USB keys</dt><dd>We   <strong>don't</strong> accept</dd>
+
+  
+  
+  </dl>
+<p>Make sure you can also access your:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+    <li class="cnjnctn-col">
+   <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My  Business Account</a> <span class="wb-inv">: Option 1</span>
+      <p>Is a secure, password protected portal, that allows you to file information returns electronically through Internet file transfer and Web forms </p>
+    </li>
+    <li class="cnjnctn-col">
+  <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent  a Client</a> <span class="wb-inv">: Option 2</span>
+      <p>is a secure service to access tax information and file information returns electronically on behalf of individuals and businesses, including your employer</p>
+    </li>
 </ul>
-<p>After  you save the .zip file on your computer, use an extracting software (for  example WinZip) to extract the .xsd files. You have to extract and save <strong>all  files</strong> to one location on your hard drive.</p>
-<ul>
-  <li>Validate  your file using a validating parser downloaded from the Internet.</li>
-</ul>
-<h3>Other  methods of electronic filing:</h3>
-<p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My  Business Account</a> is a secure, password  protected portal, that allows you to file information returns electronically  through Internet file transfer and Web forms.<br>
-  <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent  a Client</a> is a secure service to access tax  information and file information returns electronically on behalf of  individuals and businesses, including your employer.</p>
-<h2>What  happens if you have more than one payroll account</h2>
-<p>If you have more than one payroll  account, you have to file a separate return for each account.</p>
-<h2>What  happens if you file using the wrong method</h2>
+ 
+
+</li>
+<li><h2>Be aware of penalties</h2>
+<details>
+<summary>Penalties if you file using the wrong filing method</summary>
 <p>If you are <strong>required</strong> to <a href="https://test.canada.ca/cra-arc/payroll/file/how.html#h_1_1">file  electronically</a> and you do not file the  returns by <a href="https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en">Internet  file transfer</a> or <a href="https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en">Web  Forms</a>, you may have to pay a penalty as  determined in the table below.<br>
   <strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns filed in an incorrect format. The  penalty is calculated per type of information return. For example, if you file  51 T5 slips and 51 T4 slips on paper, the CRA would assess 2 penalties of $250,  1 per type of information return.</p>
-<table border="0" cellspacing="0" cellpadding="0" width="745">
+<table class="table">
+  <caption>Penalty     based on the number of information returns (slips)</caption>
   <tr>
-    <td colspan="2"><br>
-      <strong>Penalty     based on the number of information returns (slips)</strong></td>
-  </tr>
-  <tr>
-    <td valign="bottom"><p><strong>Number of information returns (slips)     by type</strong></p></td>
-    <td valign="bottom"><p><strong>Penalty</strong></p></td>
+    <th scope="col">Number of information returns (slips)     by type</th>
+    <th scope="col">Penalty</th>
   </tr>
   <tr>
     <td><p>6 to 50 <strong>Returns filed on or    after January 1, 2024</strong></p></td>
@@ -158,8 +171,13 @@
     <td><p>$2,500</p></td>
   </tr>
 </table>
-<h3>What  if you file your information return late?</h3>
+</details>
+<details>
+<summary>Penalties if you file your information return late</summary>
 <p>If you file your information return past  the due date you may be charged a penalty. To learn more, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return">late-filing  penalties for information returns.</a></p>
+</details>
+</li>
+</ol>
 
 
 
