--- a/subway/fire/4a.html
+++ b/subway/fire/4a.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>How to file with Web Forms - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
+         <title>Filing with Web Forms - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -18,6 +18,7 @@
          <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		   <link href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
          <!-- Write closure template -->
          <script type="text/javascript">
@@ -65,14 +66,15 @@
                   <li><a href="3.html">Get ready to file</a></li>
                   <li><a href="4.html">How to file</a>
 				  <ul class="noline">
-				  <li><a href="4a.html" class="active">How to file with Web Forms</a></li>
+				  <li><a href="4a.html" class="active">Filing with Web Forms</a></li>
+				  <li><a href="4b.html">Filing with Internet file transfer</a></li>
 				  </ul>
 				  </li>
                   <li><a href="5.html">Make corrections after filing</a></li>
 				   <li><a href="6.html">Contact us</a></li>
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">How to file with Web Forms</h1>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Filing with Web Forms</h1>
             <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 class="h3">On this page</h2>
             <ul>
