--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1333,7 +1333,7 @@ estimated by the number of pay periods in the year. </p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Judith was required to use the automobile in connection with her employment in Ontario. The initial costs (including down payment, trade-in amount, and taxes not included in monthly lease cost) was $500. The monthly leasing cost (including associated costs, GST/HST and PST) is $600 and the total lease period is 24 months. She is not selling or leasing automobiles. The automobile was made available to Judith for 150 days during the year. Judith was required to use the automobile in connection with her employment. She used the automobile for business driving 40% of the time. In verifying her travel, you found that she drove 5,500 km for personal driving 12,000 km out of a total of 20,000 km. Judith reimbursed you $500 for the standby charge. </p>
+<p>In 2022, Judith was required to use the automobile in connection with her employment in Ontario. The initial costs (including down payment, trade-in amount, and taxes not included in monthly lease cost) was $500. The monthly leasing cost (including associated costs, GST/HST and PST) is $600 and the total lease period is 24 months. She is not selling or leasing automobiles. The automobile was made available to Judith for 150 days during the year. Judith was required to use the automobile in connection with her employment. She used the automobile for business driving 40% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving 12,000 km out of a total of 20,000 km. Judith reimbursed you $500 for the standby charge. </p>
  <h4>Step A - Cost of leased automobile</h4>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                               
@@ -1600,7 +1600,7 @@ estimated by the number of pay periods in the year. </p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Diane was required to use an  automobile provided and owned by her employer in connection with her employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. Her employment does  not involve selling or leasing automobiles. The automobile was made available to Diane for 150 days during the year. She used the automobile for business driving 80% of the time. In reviewing verifying her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. Diane did not reimburse you for the standby charge.</p>
+<p>In 2022, Diane was required to use an  automobile provided and owned by her employer in connection with her employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. Her employment does  not involve selling or leasing automobiles. The automobile was made available to Diane for 150 days during the year. She used the automobile for business driving 80% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. Diane did not reimburse you for the standby charge.</p>
 <h4>Step A - Use and availability</h4> 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
@@ -1990,7 +1990,7 @@ estimated by the number of pay periods in the year. </p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Matthew was required to use an  automobile provided and owned by his employer in connection with his employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. He is not selling or leasing automobiles. The automobile was made available to Matthew throughout the year (365 days). In reviewing his travel logbook, you found that he drove 10,000 km for personal driving out of a total of 12,000 km. Matthew reimbursed $166.67  directly to third party in the year. Matthew did not provide a written notice to use the alternative method of calculating the operating expenses benefit.</p>
+<p>In 2022, Matthew was required to use an  automobile provided and owned by his employer in connection with his employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. He is not selling or leasing automobiles. The automobile was made available to Matthew throughout the year (365 days). In reviewing his travel logbook, you found that he drove 10,000 km for personal driving out of a total of 12,000 km. Matthew reimbursed $166.67 directly to a third party in the year. Matthew did not provide a written notice to use the alternative method of calculating the operating expenses benefit.</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
