--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -2040,7 +2040,7 @@ estimated by the number of pay periods in the year. </p>
 
 
 
-<li><h3 id="step13">Withhold payroll deductions and remit GST/HST</h3>
+<li><h3 id="step13">Withhold payroll deductions and calculate the GST/HST to remit</h3>
 <p>The benefit for personal driving of an automobile is a non-cash benefit.</p>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold-alt.txt"></div></p> 
 
