--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -662,7 +662,7 @@
 </li>
 
 
-<li> <h3 id="step9">Withhold payroll deductions and remit GST/HST</h3>
+<li> <h3 id="step9">Withhold payroll deductions and calculate the GST/HST to remit</h3>
 <p>The benefit for personal driving of a motor vehicle is a non-cash benefit.</p>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold-alt.txt"></div></p>
 
