--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -716,7 +716,7 @@
 
 </li>
 
-<li> <h3 id="step9">Withhold payroll deductions and remit GST/HST</h3>
+<li> <h3 id="step9">Withhold payroll deductions and calculate the GST/HST to remit</h3>
 
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold-alt2.txt"></div></p> 
 
