--- a/subway/fire/4.html
+++ b/subway/fire/4.html
@@ -115,9 +115,9 @@
   <li>Send  encrypted returns over the Internet</li>
 </ul>
 </details>
-<p>Refer to: <a href="4a.html">How to file with Web Forms</a></p></dd>
+</dd>
   <dt><span class="fas fa-check text-success"></span> Internet file transfer</dt><dd><p>For you to use payroll, commercial, or in-house developed software, to submit an XML file of up to 150 MB over the Internet</p>
-  <p>Refer to: <a href="4b.html">How to file with Internet file transfer</a></dd>
+  </dd>
 
 
   <dt><span class="fas fa-times text-danger"></span> CDs, DVDs, USB keys</dt><dd>We   <strong>don't</strong> accept</dd>
@@ -177,17 +177,19 @@
 <p>If you file your information return past  the due date you may be charged a penalty. To learn more, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return">late-filing  penalties for information returns.</a></p>
 </details>
 </li>
+<li><h2>Transfer the files to CRA</h2>
+<p>Follow the instructions for either:</p>
+<ul>
+<li><a href="4a.html">Filing with Web Forms</a></li>
+  <li><a href="4b.html">Filing with Internet file transfer</a></li>
+  </ul>
+</li>
 </ol>
 
 
 
 
-            <nav class="gc-subway-pagination">
-               <h2 class="wb-inv">Document navigation</h2>
-               <ul class="pager">
-                  <li class="next"><a href="5.html" rel="next"><span class="wb-inv">Next: </span>Make corrections after filing</a></li>
-               </ul>
-            </nav>
+           
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
