--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -261,34 +261,60 @@
 
 <h2 id="h_6">References</h2>
 
-<h3 id="h_4_2">Court cases</h3>
+<h3 id="h_6_1">Supreme Court of Canada</h3>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/2118/index.do?q=Transport+Nordt+American+Express+Inc">29355</a>  </dt> <dd>Supreme Court - Transport Nordt American Express Inc. v. New Solutions Financial Corp., 2004 SCC 7 </dd>
+<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/2118/index.do?q=Transport+Nordt+American+Express+Inc">2004 SSC 7 (29355)</a>  </dt> <dd>Transport Nordt American Express Inc. v. New Solutions Financial Corp. </dd>
+</dl>
+</div>
+</div>
+
+<h3 id="h_6_2">Federal Court of Appeal</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
 <dt><a href="https://reports.fja-cmf.gc.ca/fja-cmf/j/en/item/332348/index.do">A-881-96</a> </dt> 
-<dd>Federal Court of Appeal - Still v. Canada (M.N.R.) [1998] 1 F.C. 549 </dd>
+<dd>Still v. Canada (M.N.R.) [1998] 1 F.C. 549 </dd>
 <dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34429/index.do?q=ozdemir">A-31-97</a>  </dt> 
-<dd>Federal Court of Appeal - Canada (Attorney General) v. Polat [1997] F.C.J. No. 1675 </dd>
+<dd>Canada (Attorney General) v. Polat [1997] F.C.J. No. 1675 </dd>
+</dl>
+</div>
+</div>
+
+<h3 id="h_6_3">Tax Court of Canada</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
 <dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/28999/index.do?q=coicou">2008 TCC 628</a>  </dt> 
-<dd>Tax Court of Canada - Coicou v. Canada (M.N.R.) 2008 TCC 628 </dd>
+<dd>Coicou v. Canada (M.N.R.) 2008 TCC 628 </dd>
 <dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/26083/index.do?q=garland+3282">2005 TCC 176</a>  </dt> 
-<dd>Tax Court of Canada - Garland v. Canada (M.N.R.) 2005 TCC 176 </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24234/index.do?q=bruno+bouillon">2000-5076-EI</a> </dt> <dd>Tax Court of Canada - Pollet v. M.N.R.</dd>
+<dd>Garland v. Canada (M.N.R.) 2005 TCC 176 </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24234/index.do?q=bruno+bouillon">2000-5076-EI</a> </dt> 
+<dd>Pollet v. M.N.R.</dd>
 <dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24830/index.do?q=mia+1040">98-1040-UI</a>  </dt> 
-<dd>Tax Court of Canada - Mia v. Canada (M.N.R.) [2001] T.C.J. No. 199  </dd>
+<dd>Mia v. Canada (M.N.R.) [2001] T.C.J. No. 199  </dd>
 <dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23837/index.do?q=amer+1794">97-1794-UI</a>  </dt> 
-<dd>Tax Court of Canada - Amer v. Canada (M.N.R.) [1999] T.C.J. No. 213  </dd>
+<dd>Amer v. Canada (M.N.R.) [1999] T.C.J. No. 213  </dd>
 <dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23458/index.do?q=luzolo">97-2000-UI</a>   </dt> 
-<dd>Tax Court of Canada - Luzolo v. Canada (M.N.R.) [1999] T.C.J. No. 822  </dd>
+<dd>Luzolo v. Canada (M.N.R.) [1999] T.C.J. No. 822  </dd>
 <dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23034/index.do?q=haule">98-511-UI</a>  </dt> 
-<dd>Tax Court of Canada - Haule v. Canada (M.N.R.) [1998] T.C.J. No. 1079  </dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23589/index.do?q=bruno+bouillon">97-254-UI, 97-255-UI, 97-256-UI</a> </dt> <dd>Tax Court of Canada - Johnston v. M.N.R.</dd>
-<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24113/index.do?q=bruno+bouillon">96-1942-UI</a> </dt> <dd>Tax Court of Canada - Jones v. M.N.R.</dd>
+<dd>Haule v. Canada (M.N.R.) [1998] T.C.J. No. 1079  </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23589/index.do?q=bruno+bouillon">97-254-UI, 97-255-UI, 97-256-UI</a> </dt> 
+<dd>Johnston v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24113/index.do?q=bruno+bouillon">96-1942-UI</a> </dt> 
+<dd>Jones v. M.N.R.</dd>
+</dl>
+</div>
+</div>
+
+<h3 id="h_6_4">British Columbia Court of Appeal</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
 <dt><a href="https://www.canlii.org/en/bc/bcca/doc/1955/1955canlii308/1955canlii308.html?searchUrlHash=AAAAAQAPSGFyZG1hbiB2LiBGYWxrAAAAAAE&amp;resultIndex=1">DLR 129</a> </dt> 
 <dd>British Columbia Court of Appeal - Hardman v. Falk, [1955] 3 D.L.R. 129  </dd>
 </dl>
-	
 </div>
 </div>
 
