--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -265,7 +265,7 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/2118/index.do?q=Transport+Nordt+American+Express+Inc">2004 SSC 7 (29355)</a>  </dt> <dd>Transport Nordt American Express Inc. v. New Solutions Financial Corp. </dd>
+<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/2118/index.do?q=Transport+Nordt+American+Express+Inc">29355</a>  </dt> <dd>Transport Nordt American Express Inc. v. New Solutions Financial Corp. [2004]</dd>
 </dl>
 </div>
 </div>
